--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bitflags = "2.6.0"
 color-eyre = "0.6.3"
 lazy_static = "1.4.0"
-rand = "0.8.5"
 tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "net"] }
